[package]
name = "coldlock"
version = "0.1.0"
edition = "2024"

[dependencies]
pam = { package = "pam-f", version = "0.8.2", default-features = false, features = [
	"client",
] }
iced = { version = "0.14", features = ["advanced", "image"] }
iced_sessionlock = { version = "0.17.1", default-features = false }
uzers = "0.12.2"
chrono = "0.4.44"
